Fix #watcher not showing on hover

--- a/OneeChan.css
+++ b/OneeChan.css
@@ -1618,6 +1618,9 @@ div[class="navLinks"] a:first-of-type:hover::after {
   opacity: 0.4;
   z-index: 5;
 }
+#watcher {
+  z-index: 5;
+}
 #watcher:hover::before {
   opacity: 1;
   cursor: pointer;
